my first commit

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,13 +15,24 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+@layer base {
+  .font-cursive {
+    font-family: 'Pacifico', cursive;
+  }
+}
 
 body {
   color: rgb(var(--foreground-rgb));
+  background: black;
+  /* color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
+}
+
+.custom-img {
+  background-image: url('https://images.unsplash.com/photo-1554679665-f5537f187268?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80');
 }
