--- a/app/menus/menus.css
+++ b/app/menus/menus.css
@@ -27,6 +27,24 @@
 .kid-free{
   padding-top: 20px;
 }
+/* menus.css */
+.menu-button {
+  background-color: #4CAF50; /* Green background color */
+  border: none; /* Remove border */
+  color: white; /* White text color */
+  padding: 10px 20px; /* Add some padding */
+  text-align: center; /* Center text */
+  text-decoration: none; /* Remove underline */
+  display: inline-block;
+  font-size: 16px; /* Set font size */
+  cursor: pointer; /* Add cursor pointer on hover */
+  border-radius: 5px; /* Add border radius */
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* Add box shadow */
+}
+
+.menu-button:hover {
+  background-color: #45a049; /* Darker green color on hover */
+}
 
 
 
